Tue Aug 7 04:06:48 EDT 2007 J Phelps <godless@users.sf.net>
	* simple_edit_effects.(cpp|h), edit_effect.h: Altered the
	indentation style. Changed all p_begin and p_end arguments to
	type ptrdiff_t to get rid of "comparison between signed and
	unsigned" warnings, which I have found to be a source of
	bugs.
	
	Edit_Effect_PreLoop_Cut::process: The loop pointers are
	adjusted before the truncate(), because otherwise,
	truncate() does some adjustments of its own which
	cause the loop to end up having Start:End positions
	0:1.
Mon Aug 6 22:54:33 EDT 2007 J Phelps <godless@users.sf.net>
	* interface.cpp(eventFilter): Imposed my intentation style on
	the entire file. Also fixed another old bug: eventFilter()
	didn't properly handle keyPressEvents for the live keyboard.
	As a result, the real-time keyboard sometimes got triggered
	twice, which Linietsky worked around by adding a filter
	in Player_Realtime_Keyboard::instrument_press_key()

	eventFilter now handles those keyPressEvents properly, and
	the filter code in (instrument|sample)_press_key has been
	removed.
	
Mon Aug 6 21:28:16 EDT 2007 J Phelps <godless@users.sf.net>
	* sample_data_fixedpoint.h(fixedpoint_loop): More
	minor math adjustments.
	* trackercore/player_rt_keyboard.cpp: Some functions
	here are copied in the identically-named
	interface_binds/player_rt_keyboard.cpp. A bug was fixed
	in the latter copy which remained in the former. Both
	copies are fixed now.

	The two copies are subly different, and therefore can't
	be merged until I better understand them.
Mon Aug 6 19:42:31 EDT 2007 J Phelps <godless@users.sf.net>
	* interface_binds/tracker_instance.cpp: Libaudiofile
	is registered first, because CheeseTracker calls each
	loader in succession to open a file, and the larger
	samples are likely to be the ones that are recognized
	by Libaudiofile. Loading them with libaudiofile first
	will therefore result in shorter load times.
Mon Aug 6 19:32:14 EDT 2007 J Phelps <godless@users.sf.net>